force-app/main/default/objects/Account/fields/Retail_Private_Banking__c.field-meta.xml
<CustomField>
    <fullName>Retail_Private_Banking__c</fullName>
    <label>Private Banking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>