force-app/main/default/objects/Account/fields/Retail_Resolving_Entity_Establishment__c.field-meta.xml
<CustomField>
    <fullName>Retail_Resolving_Entity_Establishment__c</fullName>
    <description>This field has created as part of CSI module and used on customer onboarding</description>
    <label>Resolving Entity Establishment Date</label>
    <type>Date</type>
</CustomField>