force-app/main/default/objects/Account/fields/Retail_SSN__c.field-meta.xml
<CustomField>
    <fullName>Retail_SSN__c</fullName>
    <description>This field is used to show ssn in global search.</description>
    <label>SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>