force-app/main/default/objects/Account/fields/Retail_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Retail_State_Province__c</fullName>
    <description>This field has created to use on Customer onboarding.</description>
    <label>State/Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>