force-app/main/default/objects/Account/fields/Retail_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Retail_Street_Address__c</fullName>
    <description>This field has created to use on Customer onboarding feature</description>
    <label>Street Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>