force-app/main/default/objects/Account/fields/Retail_TIN_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Retail_TIN_ID_Type__c</fullName>
    <defaultValue>&apos;EIN&apos;</defaultValue>
    <label>TIN ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSN</fullName>
            </value>
            <value>
                <fullName>EIN</fullName>
            </value>
            <value>
                <fullName>ATIN</fullName>
                <isActive>false</isActive>
                <label>ATIN</label>
            </value>
            <value>
                <fullName>ATIN-Unverified</fullName>
                <isActive>false</isActive>
                <label>ATIN-Unverified</label>
            </value>
            <value>
                <fullName>EIN-Unverified</fullName>
                <isActive>false</isActive>
                <label>EIN-Unverified</label>
            </value>
            <value>
                <fullName>Foreign</fullName>
                <isActive>false</isActive>
                <label>Foreign</label>
            </value>
            <value>
                <fullName>ITIN</fullName>
                <isActive>false</isActive>
                <label>ITIN</label>
            </value>
            <value>
                <fullName>ITIN-Unverified</fullName>
                <isActive>false</isActive>
                <label>ITIN-Unverified</label>
            </value>
            <value>
                <fullName>Not Present</fullName>
                <isActive>false</isActive>
                <label>Not Present</label>
            </value>
            <value>
                <fullName>SSN-Unverified</fullName>
                <isActive>false</isActive>
                <label>SSN-Unverified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>