force-app/main/default/objects/Account/fields/Retail_Total_Saving__c.field-meta.xml
<CustomField>
    <fullName>Retail_Total_Saving__c</fullName>
    <description>This field has created to use in Credit Memo feature</description>
    <label>Total Saving</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>