force-app/main/default/objects/Account/fields/Retail_Website__c.field-meta.xml
<CustomField>
    <fullName>Retail_Website__c</fullName>
    <description>This field has created to use on Customer onboarding feature</description>
    <label>Website</label>
    <length>250</length>
    <type>Text</type>
</CustomField>