force-app/main/default/objects/Account/fields/Retail_Workplace_Banking__c.field-meta.xml
<CustomField>
    <fullName>Retail_Workplace_Banking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field has created to stamp MDM integration.</description>
    <label>Workplace Banking?</label>
    <type>Checkbox</type>
</CustomField>