force-app/main/default/objects/Account/fields/Retail_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Retail_Zip_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zip / Postal Code</label>
    <referenceTo>Retail_County__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>