force-app/main/default/objects/Account/fields/Retail_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Retail_Zip_Postal_Code__c</fullName>
    <description>This field has created to use on Customer onboarding</description>
    <label>Zip/Postal Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>