force-app/main/default/objects/Account/fields/Type_of_Business_Other__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Business_Other__c</fullName>
    <description>This field has created as a part of customer onboarding feature</description>
    <label>Type of Business Other:</label>
    <length>18</length>
    <type>Text</type>
</CustomField>