force-app/main/default/objects/Account/fields/User_elected_the_3508_EZ_Form__c.field-meta.xml
<CustomField>
    <fullName>User_elected_the_3508_EZ_Form__c</fullName>
    <label>User elected the 3508 EZ Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>