force-app/main/default/objects/Account/recordTypes/LLC_BI__Individual.recordType-meta.xml
<RecordType>
    <fullName>LLC_BI__Individual</fullName>
    <active>true</active>
    <description>Select &quot;Individual&quot; if you&apos;re adding an Individual or Sole Proprietorship relationship type.</description>
    <label>Individual</label>
</RecordType>