force-app/main/default/objects/Account/validationRules/ncoe_Tax_Identification_Max_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>ncoe_Tax_Identification_Max_Length</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( LLC_BI__Tax_Identification_Number__c ) &gt; 9</errorConditionFormula>
    <errorMessage>Tax Identification Number cannot exceed 9 characters</errorMessage>
</ValidationRule>