force-app/main/default/objects/Account/validationRules/Retail_Business_Phone_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Retail_Business_Phone_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(
OR(
LEN (Phone) = 0,
REGEX(Phone , &quot;(^(?!000)[0-9]{10,14}$)&quot;)
)
),NOT($Setup.Retail_Bypass_Metadata__c.Retail_Validation_Rule__c)
)</errorConditionFormula>
    <errorMessage>Please enter a valid phone number.</errorMessage>
</ValidationRule>