force-app/main/default/objects/Account/validationRules/Retail_Restrict_Account_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Retail_Restrict_Account_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND((ISNEW() || ISCHANGED(Name) )&amp;&amp; LEN( Name ) &gt; 50 ,NOT($Setup.Retail_Bypass_Metadata__c.Retail_Validation_Rule__c)
)</errorConditionFormula>
    <errorMessage>Relationship Name cannot exceed 50 characters</errorMessage>
</ValidationRule>