force-app/main/default/objects/Account/validationRules/Retail_TypeOfBusinessOtherfield.validationRule-meta.xml
<ValidationRule>
    <fullName>Retail_TypeOfBusinessOtherfield</fullName>
    <active>false</active>
    <description>This validation rule has created to validate if value in &quot;Type of Business&quot; field is other then make &quot;Type of Business Other&quot; field required.</description>
    <errorConditionFormula>AND(AND(
    TEXT(Type)=&quot;Other&quot;,
    ISBLANK(Retail_Type_of_Business_Other__c)
    ) ,NOT($Setup.Retail_Bypass_Metadata__c.Retail_Validation_Rule__c)
)</errorConditionFormula>
    <errorMessage>Please enter value in &quot;Type of Business Other:&quot; field</errorMessage>
</ValidationRule>