force-app/main/default/objects/Account/validationRules/Retail_ValidateLimitedLiabilityManagemen.validationRule-meta.xml
<ValidationRule>
    <fullName>Retail_ValidateLimitedLiabilityManagemen</fullName>
    <active>true</active>
    <description>This validation rule has created to validate if Type of Business is &quot;Limited Liability Company&quot; then make &quot;Limited Liability Management Type&quot; field required.</description>
    <errorConditionFormula>AND(AND(
     TEXT( Type )=&apos;Limited Liability Company&apos;,
     ISBLANK(TEXT(LLC_BI__Limited_Liability_Management_Type__c ))
) ,NOT($Setup.Retail_Bypass_Metadata__c.Retail_Validation_Rule__c)
)</errorConditionFormula>
    <errorMessage>Please enter value in Limited Liability Management Type field</errorMessage>
</ValidationRule>