force-app/main/default/objects/Account/validationRules/Retail_ValidateMailingAdressSectionField.validationRule-meta.xml
<ValidationRule>
    <fullName>Retail_ValidateMailingAdressSectionField</fullName>
    <active>true</active>
    <description>This validation rule has created to validate if &apos;Physical Address is the same as mailing address?&apos; check box field is unchecked then validate fields in Billing section is required</description>
    <errorConditionFormula>AND(AND( 
     
      TEXT(Type)=&apos;Business&apos;,
       ISPICKVAL(Retail_Physical_Address_same_as_mailing__c,&apos;No&apos;), 
      OR(
       ISBLANK(   Retail_Mailing_Street_Address__c   ), 
      
       ISBLANK(  Retail_Mailing_Zip_Code_Lookup__c   )
      ),


NOT(ISBLANK(   LLC_BI__Tax_Identification_Number_PE__c    ))

  
) ,NOT($Setup.Retail_Bypass_Metadata__c.Retail_Validation_Rule__c)
)</errorConditionFormula>
    <errorMessage>Please enter value in Mailing Street , Mailing Zip/Postal Code</errorMessage>
</ValidationRule>