force-app/main/default/objects/Account/validationRules/Retail_ValidationRuleForTridUser.validationRule-meta.xml
<ValidationRule>
    <fullName>Retail_ValidationRuleForTridUser</fullName>
    <active>true</active>
    <description>This validation rule has created to restrict TRID user from creating Business type relationship</description>
    <errorConditionFormula>AND( AND(
       $Profile.Name =&apos;TRID User&apos;,
       TEXT(Type) =&apos;Business&apos;
),NOT($Setup.Retail_Bypass_Metadata__c.Retail_Validation_Rule__c)
)</errorConditionFormula>
    <errorMessage>TRID user can&apos;t create a Business type relationship</errorMessage>
</ValidationRule>