force-app/main/default/objects/Account/listViews/Retail_Individual_Relationships.listView-meta.xml
<ListView>
    <fullName>Retail_Individual_Relationships</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Retail_SSN__c</columns>
    <columns>Retail_City__c</columns>
    <columns>Retail_State_Province__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.LLC_BI__Individual</value>
    </filters>
    <label>Individual Relationships</label>
</ListView>